# sv-api-proj-test

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  app.py  pyproject.toml  requirements.txt  test_app.py
static/css/: styles.css
templates/: index.html
tests/: test_foo.py
