[project]
name = "sv-api-proj-test"
version = "0.0.1"
description = "Test project using the SV api"
authors = [{ name = "Nabeel Keblawi", email = "kebnab@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.8,<4.0"

[project.urls]
Homepage = "https://nkeblawi.github.io/sv-api-proj-test/"
Repository = "https://github.com/nkeblawi/sv-api-proj-test"
Documentation = "https://nkeblawi.github.io/sv-api-proj-test/"

[tool.uv]
dev-dependencies = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "flask>=3.0.3",
    "mypy>=0.991",
    "python-dotenv==1.0.1",
    "ruff>=0.0.235",
    "matplotlib==3.9.2",
    "numpy==2.1.1",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = ["sv_api_proj_test"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true


